# agentic-analytics-copilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: ask.py  debug.py  health.py
app/core/: auth.py  cache.py  config.py  logging.py  observability.py
app/db/: bootstrap.py  duckdb_client.py
app/llm/: client.py  prompts.py
app/orchestration/: graph.py  nodes.py  router.py  state.py
app/retrieval/: chunker.py  loader.py  models.py  reranker.py  vector_store.py
app/schemas/: answer.py  ask.py  health.py  tools.py
app/services/: answer_service.py  incident_service.py  kpi_service.py  metric_service.py  metrics_service.py  policy_service.py  retrieval_service.py  workflow_service.py
app/tools/: operations_tools.py
data/docs/: README.md  catalog.md  chunking_strategy.md
data/docs/incident_notes/: region3_march31_review.md
data/docs/metric_definitions/: delivery_success_rate.md  on_time_delivery_rate.md
data/raw/: README.md
data/structured/: README.md  schema.md
data/vector/: README.md
evals/: README.md  llm_judge.py  run_eval.py
evals/datasets/: eval_questions.json
frontend/: streamlit_app.py
scripts/: build_curated_data.py  index_documents.py  init_duckdb.py  run_data_quality_checks.py
tests/: test_answer_service.py  test_api_v1.py  test_cache.py  test_chunker.py  test_data_pipeline.py  test_health.py  test_llm_client.py  test_metrics_service.py  test_orchestration.py  test_policy_service.py  test_retrieval.py  test_router.py  test_router_eval_alignment.py  test_services.py  test_workflow_service.py
(+18 files in other folders)
