[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-analytics-copilot"
version = "0.1.0"
description = "Production-style analytics copilot for enterprise operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.7",
    "duckdb>=1.2.2",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.56",
    "langfuse>=2.60.0",
    "numpy>=2.0.0",
    "openai>=1.75.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "PyJWT>=2.9.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.4.1",
    "slowapi>=0.1.9",
    "streamlit>=1.44.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
